leaveBookingApi/server.stderr.log
C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/Server.ts(5,10): error TS2300: Duplicate identifier 'ResponseHandler'.
src/Server.ts(7,10): error TS2300: Duplicate identifier 'ResponseHandler'.

    at createTSError (C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1943:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\daltonc\Documents\Object Orientated Programming\Assignment\leaveBookingApi\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
  diagnosticCodes: [ 2300, 2300 ]
}
